@@ -1,3 +1,8 @@
+2011-07-10  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* display external node windows on double click or shift
+	  click
+
 2011-07-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* improve current node positioning
